--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 </head>
 
 <body>
+  <h1>Broadway Design</h1>
+  <div class="menu">
+  <a href="">Home</a>
+  <br/>
+  <a href="">About<a>
+  <br/>
+  <a href="">Work<a>
+  <br/>
+  <a href="">Team<a>
+  <br/>
+  <a href="">Contact<a>
+  </div>
+
+  <nav>
+
+
+  </nav>
 
 </body>
 
