--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
 
 <body>
   <h1>Broadway Design</h1>
-  <div class="menu">
-  <a href="">Home</a>
-  <br/>
-  <a href="">About<a>
-  <br/>
-  <a href="">Work<a>
-  <br/>
-  <a href="">Team<a>
-  <br/>
-  <a href="">Contact<a>
-  </div>
 
   <nav>
+  <div class="menu">
+    <a href="">Home</a>
+    <br/>
+    <a href="">About<a>
+    <br/>
+    <a href="">Work<a>
+    <br/>
+    <a href="">Team<a>
+    <br/>
+    <a href="">Contact<a>
+  </div>
+
+  <div>
+    <h2>Our Process</h2>
+    <img src="Resources/Images/identify.svg"/>
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+
+    <img src="Resources/Images/understand.svg"/>
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+
+    <img src="Resources/Images/execute.svg"/>
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+
+  </div>
 
 
   </nav>
