Make CSS coding and arrangements

--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="./Resource/CSS/style.css" type="text/css" rel="stylesheet">
+  <link href="./Resources/CSS/style.css" type="text/css" rel="stylesheet">
   <title>Broadway</title>
 </head>
 
 <body>
-  <h1>Broadway Design</h1>
-
   <nav>
-  <div class="menu">
-    <a href="">Home</a>
-    <br/>
-    <a href="">About<a>
-    <br/>
-    <a href="">Work<a>
-    <br/>
-    <a href="">Team<a>
-    <br/>
-    <a href="">Contact<a>
-  </div>
+  <div class="header">
+  <h1>Broadway Design</h1>
+    <div class="menu">
+      <a href="">Home</a>
+        <br/>
+      <a href="">About<a>
+        <br/>
+      <a href="">Work<a>
+        <br/>
+      <a href="">Team<a>
+        <br/>
+      <a href="">Contact<a>
+    </div>
 
-  <div>
+  </div>
+<!-- This is the middle section-->
+  <div class="process">
     <h2>Our Process</h2>
     <img src="Resources/Images/identify.svg"/>
     <h3>Identify</h3>
@@ -34,9 +36,25 @@
     <img src="Resources/Images/execute.svg"/>
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
-
   </div>
 
+<!-- This is the final section-->
+  <div class="final">
+    <h3 class="designed">Designed in New York</h3>
+
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+  </div>
+
+  <p class="footage">© Broadway 2017 Home About Work Team Contact</p>
 
   </nav>
 
