Make final details and finishing.

--- a/index.html
+++ b/index.html
@@ -7,54 +7,55 @@
 
 <body>
   <nav>
-  <div class="header">
-  <h1>Broadway Design</h1>
-    <div class="menu">
-      <a href="">Home</a>
-        <br/>
-      <a href="">About<a>
-        <br/>
-      <a href="">Work<a>
-        <br/>
-      <a href="">Team<a>
-        <br/>
-      <a href="">Contact<a>
+  <!-- This is the heading of the page including the main menu-->
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <p class="menu"><a href="">Home</a></p>
+      <a href="">About<a></p>
+      <a href="">Work<a></p>
+      <a href="">Team<a></p>
+      <a href="">Contact<a></p>
     </div>
 
-  </div>
 <!-- This is the middle section-->
-  <div class="process">
-    <h2>Our Process</h2>
-    <img src="Resources/Images/identify.svg"/>
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
+    <div class="process">
+      <h2>Our Process</h2>
+      <img src="Resources/Images/identify.svg"/>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
 
-    <img src="Resources/Images/understand.svg"/>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+      <img src="Resources/Images/understand.svg"/>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
 
-    <img src="Resources/Images/execute.svg"/>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
-  </div>
+      <img src="Resources/Images/execute.svg"/>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
 
 <!-- This is the final section-->
-  <div class="final">
-    <h3 class="designed">Designed in New York</h3>
+    <div class="final">
+      <h3 class="designed">Designed in New York</h3>
 
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
 
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
 
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
-  </div>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
 
-  <p class="footage">© Broadway 2017 Home About Work Team Contact</p>
+    <p class="footage">© Broadway 2017
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Work</a>
+      <a href="">Team</a>
+      <a href="">Contact</a>
+    </p>
 
   </nav>
 
